--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 </head>
 <body class="antialiased">
     <div id="root"></div>
-<script type="module" src="/App.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
